增加isModule判断是否为单独组件 编辑对应manifest文件 测试arouter跳转 完善依赖引用内容

--- a/lib_ability/src/main/res/layout/ability_main_activity.xml
+++ b/lib_ability/src/main/res/layout/ability_main_activity.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context=".AbilityMainActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/ability_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="pet2222222"
+        android:text="42345353"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
